use jdk 11 to build java source code